--- a/SimpleUrlListSLN/SimpleUrlList.Web/Pages/Shared/_Layout.cshtml
+++ b/SimpleUrlListSLN/SimpleUrlList.Web/Pages/Shared/_Layout.cshtml
@@ -22,7 +22,12 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-page="/Info/Index">Home</a>
                     </li>
-
+                    @if (User.Identity is { IsAuthenticated: true })
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Groups/Index">Search</a>
+                        </li>
+                    }
                 </ul>
             </div>
             <div class="align-content-end me-2">
