--- a/SimpleUrlListSLN/SimpleUrlList.Web/Pages/User/Dashboard.cshtml
+++ b/SimpleUrlListSLN/SimpleUrlList.Web/Pages/User/Dashboard.cshtml
@@ -16,3 +16,13 @@
 
 <h1>Dashboard for @identityName</h1>
 
+<div class="container">
+    <div class="float-end mt-2 mb-2">
+        <div class="float-end mt-2 mb-2">
+            <a asp-page="/Groups/Create"
+               class="btn btn-success">
+                Create new link group <i class="fas fa-plus"></i>
+            </a>
+        </div>
+    </div>
+</div>
