--- a/SimpleUrlListSLN/SimpleUrlList.Web/Pages/Groups/_LinkGroupList.cshtml
+++ b/SimpleUrlListSLN/SimpleUrlList.Web/Pages/Groups/_LinkGroupList.cshtml
@@ -44,13 +44,13 @@
                         @linkGroup.Links.Count
                     </td>
                     <td>
-                        <a asp-page="/Groups/Edit"
-                           asp-route-id="@linkGroup.LinkGroupId">
+                        <a asp-page="/Groups/Create"
+                           asp-route-linkGroupId="@linkGroup.LinkGroupId">
                             <i class="fas fa-edit"></i>
                         </a>
                         &nbsp;&nbsp;
                         <a asp-page="/Groups/Delete"
-                           asp-route-id="@linkGroup.LinkGroupId">
+                           asp-route-linkGroupId="@linkGroup.LinkGroupId">
                             <i class="fas fa-trash-alt"></i>
                         </a>
                     </td>
