fixing problem with javascript and login into the system

--- a/SimpleUrlListSLN/SimpleUrlList.Web/Pages/Groups/Create.cshtml
+++ b/SimpleUrlListSLN/SimpleUrlList.Web/Pages/Groups/Create.cshtml
@@ -47,7 +47,7 @@
         <select asp-for="CreateLinkGroup.Category.CategoryId" class="form-control" name="ddlCategory">
             @foreach (var category in Model.Categories)
             {
-                if (string.IsNullOrEmpty(Model.CreateLinkGroup.LinkGroupId))
+                if (Model.CreateLinkGroup.LinkGroupId == Guid.Empty)
                 {
                     <option value="@category.CategoryId">@category.Name</option>
                 }
