--- a/SimpleUrlListSLN/SimpleUrlList.Web/Pages/Groups/Details.cshtml
+++ b/SimpleUrlListSLN/SimpleUrlList.Web/Pages/Groups/Details.cshtml
@@ -24,7 +24,7 @@
 
 <h3>
     Details about @name
-    <small>created <b>@Model.LinkGroup.CreatedAt.ToString("dd.MM.yyyy")</b> from0 <b>@Model.LinkGroup.User.FullName</b></small>
+    <small>created <b>@Model.LinkGroup.CreatedAt.ToString("dd.MM.yyyy")</b> from <b>@Model.LinkGroup.User.FullName</b></small>
 </h3>
 
 <p class="text-info">@Model.LinkGroup.Description</p>
