--- a/SimpleUrlListSLN/SimpleUrlList.Web/Pages/User/Login.cshtml
+++ b/SimpleUrlListSLN/SimpleUrlList.Web/Pages/User/Login.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Login form";
 }
 
-<h1>Login to the TTA system</h1>
+<h1>Login to the SUL system</h1>
 
 <p>Use below form to login to the system. Username and password is <b>mandatory</b> fields.</p>
 <div class="container">
@@ -48,7 +48,7 @@
                     <ul class="list-unstyled">
                         <li>
                             <a class="card-link"
-                               href="https://github.com/vrhovnik/azure-monitor-automation-wth"
+                               href="https://github.com/bovrhovn/meetup-demo-aks-one-on-one"
                                target="_blank">
                                 Source code
                             </a>
@@ -61,15 +61,16 @@
                             </a>
                         </li>
                         <li>
-                            <a asp-page="/Task/Index"
+                            <a asp-page="/Groups/Index"
                                class="card-link">
-                                Public task list
+                                Link group search
                             </a>
                         </li>
                         <li>
-                            <a href="https://docs.microsoft.com/en-gb/azure/azure-monitor/overview"
+                            <a href="https://learn.microsoft.com/en-us/azure/aks/intro-kubernetes"
+                               target="_blank"
                                class="card-link">
-                                Azure Monitor
+                                Azure Kubernetes Service
                             </a>
                         </li>
                     </ul>
