adding redirection and details about link group and redirections

--- a/SimpleUrlListSLN/SimpleUrlList.Web/Pages/Groups/Details.cshtml
+++ b/SimpleUrlListSLN/SimpleUrlList.Web/Pages/Groups/Details.cshtml
@@ -53,10 +53,10 @@
         </div>
         <div class="col-3">
             <div class="card text-bg-light mb-3">
-                <div class="card-header">Downloaded</div>
-                <div class="card-body">
-                    <span class="badge rounded-pill text-bg-light text-center">
-                        <p class="fs-1">@Model.LinkGroup.Clicked</p>
+                <div class="card-header text-center">Clicked</div>
+                <div class="card-body text-center">
+                    <span class="badge rounded-pill text-bg-light">
+                        <p class="fs-1 text-black-50">@Model.LinkGroup.Clicked</p>
                     </span>
                 </div>
             </div>
