--- a/SimpleUrlListSLN/SimpleUrlList.Web/Pages/User/Dashboard.cshtml
+++ b/SimpleUrlListSLN/SimpleUrlList.Web/Pages/User/Dashboard.cshtml
@@ -36,6 +36,7 @@
         <tr>
             <th>Category</th>
             <th>Name</th>
+            <th>Short name</th>
             <th>Description</th>
             <th class="text-center">
                 Link count
@@ -54,6 +55,7 @@
                     <br/>
                     <small>created<b>@linkGroup.CreatedAt.ToString("dd.MM.yyyy")</b></small>
                 </td>
+                <td>@linkGroup.ShortName</td>
                 <td>
                     @linkGroup.Description
                 </td>
