--- a/SimpleUrlListSLN/SimpleUrlList.Web/Pages/Groups/_LinkGroupList.cshtml
+++ b/SimpleUrlListSLN/SimpleUrlList.Web/Pages/Groups/_LinkGroupList.cshtml
@@ -19,6 +19,7 @@
             <tr>
                 <th>Category</th>
                 <th>Name</th>
+                <th>Short name</th>
                 <th>Description</th>
                 <th class="text-center">
                     Link count
@@ -37,6 +38,7 @@
                         <br/>
                         <small>created<b>@linkGroup.CreatedAt.ToString("dd.MM.yyyy")</b></small>
                     </td>
+                    <td>@linkGroup.ShortName</td>
                     <td>
                         @linkGroup.Description
                     </td>
